--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -197,6 +197,12 @@ main.main {
   resize: horizontal;
 }
 
+.left-sidebar {
+  width: 0;
+  padding-left: var(--spacing);
+  padding-right : 0
+}
+
 .tool-header {
   display: flex;
   justify-content: space-between;
@@ -391,8 +397,7 @@ main.main {
   border-radius: 5px;
 }
 
-.main-navigation-r-menu,
-.main-navigation-l-menu #left-menu-button {
+.main-navigation-r-menu{
   display: none !important;
 }
 
@@ -513,6 +518,7 @@ main.main {
   z-index: 1;
   opacity: 1;
   background-color: #6c6c6cc7;
+  padding-right: var(--spacing);
 }
 
 /* --------------------------------------------------------------------------------------- */
