--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1076,5 +1076,7 @@ input::-webkit-inner-spin-button {
 }
 
 .comparison-selector {
-
+  border: 1px solid #6c6c6c;
+  border-radius: var(--radius);
+  outline: 0;
 }
