--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -358,7 +358,7 @@ main.main {
 
 .as-m {
   flex: 0 !important;
-  min-width: 70px;
+  min-width: 95px;
 }
 
 .as-b>div>div:last-child {
@@ -370,6 +370,7 @@ main.main {
   display: flex;
   justify-content: space-between;
   height: calc(100% - 10px);
+  position: relative;
 }
 
 .main-navigation>div>div, .settings-display {
@@ -391,6 +392,8 @@ main.main {
   border: 1px solid #6c6c6c;
   border-radius: var(--radius);
   outline: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 .main-navigation svg {
@@ -1079,4 +1082,10 @@ input::-webkit-inner-spin-button {
   border: 1px solid #6c6c6c;
   border-radius: var(--radius);
   outline: 0;
+}
+
+.as-m  button {
+  margin-right: -1px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
