--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -81,6 +81,11 @@ html {
   color: #000;
 }
 
+.dark-mode .selected-rawi-label {
+  background-color: #000;
+  color: #ddd;
+}
+
 .loading-on {
   opacity: 1;
   display: flex;
