- udpate darkmode for momorezation view - update khatamat to handel rawi - update error connection image to new size

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1328,6 +1328,10 @@ input::-webkit-inner-spin-button {
   background-color: #fffffb;
 }
 
+.dark-mode .memo>div>div {
+  background-color: #222222;
+}
+
 .line-selected {
   background-color: #86fff561 !important
 }
